--- a/Jyb/src/main/AndroidManifest.xml
+++ b/Jyb/src/main/AndroidManifest.xml
@@ -1,40 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.jyb"
     android:versionCode="1"
-    android:versionName="1.0.0" >
+    android:versionName="1.8.17" >
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="21" />
+    <uses-feature
+        android:name="android.software.leanback"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_ice"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:banner="@null">
+        <meta-data
+            android:name="android.max_aspect"
+            android:value="2.1" />
+
         <!-- Welcome Screen -->
         <activity
             android:name=".WelcomeActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-    		android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-			android:launchMode="singleTask"
-			android:screenOrientation="portrait">
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.NoActionBar.TranslucentDecor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
         <!-- Main Screen -->
         <activity
             android:name=".FullscreenActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-    		android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-			android:launchMode="singleTask"
-			android:screenOrientation="portrait">
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.NoActionBar.TranslucentDecor" >
         </activity>
         <!-- Aobut Screen -->
         <activity
@@ -110,7 +120,16 @@
             android:name=".MusicServer"  
             android:exported="true"  
             android:process=":remote">
-        </service>  
+        </service>
+
+        <receiver android:name=".AlarmReceiver">
+            <intent-filter>
+                <action android:name="com.example.jyb.TIMER_ACTION_REPEATING"/>
+                <action android:name="com.example.jyb.TIMER_ACTION_REPEATING1"/>
+                <action android:name="com.example.jyb.TIMER_ACTION_REPEATING2"/>
+                <action android:name="com.example.jyb.TIMER_ACTION"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
