--- a/Jyb/build.gradle
+++ b/Jyb/build.gradle
@@ -5,7 +5,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.jyb"
-        minSdkVersion 21
+        minSdkVersion 26
         //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 29
         compileOptions {
@@ -29,4 +29,5 @@ android {
 dependencies {
     implementation files('libs/bsh-2.0b4.jar')
     implementation 'cn.hutool:hutool-all:5.3.8'
+    testImplementation 'junit:junit:4.12'
 }
